--- a/rodzic_login.html
+++ b/rodzic_login.html
@@ -28,7 +28,7 @@
 	
 <div class="container">
 		
-		<img src="assets/logo_l.png" height="300px" class="rotate">
+		<img src="assets/logo.png" height="300px" class="rotate">
 
 	<form action='rodzic_postepy.html'>
 	
