--- a/rodzic_login.html
+++ b/rodzic_login.html
@@ -19,12 +19,11 @@
 		<div class="circles circle2"></div>
 		<div class="circles circle1"></div>
 
-<header>	
-<a href='index.html'>
-	<div class="header-banner">Bohater Tygodnia</div>
+<div class="index-banner index-banner-smaller">
+	<h1>Bohater</h1> <br>
+	<h1 class="font-skew">Tygodnia</h1> 
 	<img src="assets/logo.png" class="logo">
-</a>
-</header>
+</div>
 	
 <div class="container">
 		
