--- a/rodzic_login.html
+++ b/rodzic_login.html
@@ -19,7 +19,7 @@
 		<div class="circles circle2"></div>
 		<div class="circles circle1"></div>
 
-<div class="index-banner index-banner-smaller">
+<div class="index-banner">
 	<h1>Bohater</h1> <br>
 	<h1 class="font-skew">Tygodnia</h1> 
 	<img src="assets/logo.png" class="logo">
@@ -27,8 +27,6 @@
 	
 <div class="container">
 		
-		<img src="assets/logo.png" height="300px" class="rotate">
-
 	<form action='rodzic_postepy.html'>
 	
 		<input type='text' placeholder='Login'>
