--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<img src="assets/bohater3.png" height="300px">
 		
 		<br>
-	<form class="enter left" action='rodzic_login.html'>
+	<form class="enter left" action='rodzic_rejestracja.html'>
 		<button >RODZIC</button>
 	</form>
 
