--- a/rodzic_dodaj_dziecko.html
+++ b/rodzic_dodaj_dziecko.html
@@ -27,7 +27,7 @@
 	
 <div class="container">
 
-	<form action='rodzic_postepy.html'>
+	<form action='rodzic_menu.html'>
 	
 		<input type='text' placeholder='Imie'>
 
