--- a/rodzic_login.html
+++ b/rodzic_login.html
@@ -27,7 +27,7 @@
 	
 <div class="container">
 		
-	<form action='rodzic_postepy.html'>
+	<form action='rodzic_dodaj_dziecko.html'>
 	
 		<input type='text' placeholder='Login'>
 
