--- a/rodzic_dodaj_dziecko.html
+++ b/rodzic_dodaj_dziecko.html
@@ -27,7 +27,7 @@
 	
 <div class="container">
 
-	<form action='rodzic_menu.html'>
+	<form  action='rodzic_menu.html'>
 	
 		<input type='text' placeholder='Imie'>
 
@@ -49,19 +49,19 @@
 			<form>
 				<label class="avatars">
 				    <input class="kr-bohater" type="radio" name="avatar"/>
-					<img class="kr-hero-image" src="./assets/bohater.png" alt=""/>  
+					<img src="./assets/bohater.png" alt=""/>  
 				</label> 
 
 				<label class="avatars">
 				    <input class="kr-bohater" type="radio" name="avatar"/>
-				    <img class="kr-hero-image" src="./assets/bohater2.png" alt=""/>
+				    <img src="./assets/bohater2.png" alt=""/>
 				</label>
 				<label class="avatars">
 				    <input class="kr-bohater" type="radio" name="avatar"/>
-				    <img class="kr-hero-image" src="./assets/bohater3.png" alt=""/>
+				    <img src="./assets/bohater3.png" alt=""/>
 				</label>
 				<p class="hero">Wybierz bohatera</p>
-						<button type='submit'>DODAJ DZIECKO</button>
+				<button type='submit'>DODAJ DZIECKO</button>
 		  	</form>
 		</div>
 
