Poprawione menu dziecka + nawigacja rodzica

--- a/rodzic_postepy.html
+++ b/rodzic_postepy.html
@@ -26,8 +26,8 @@
         </ul>
         <ul class="nav-add">
             <li><a href="dziecko_menu.html">Przejdź na stronę dziecka</a></li>
-            <li>Ustawienia profilu dziecka</li>
-			<li>Przełącz dziecko</li>
+            <li><a href="rodzic_edycja_dziecko.html">Ustawienia profilu dziecka</a></li>
+			<li><a href="rodzic_menu.html">Przełacz dziecko</a></li>
 			<li><a href="rodzic_historia.html">Historia postępów</a></li>
 			<li><a href="rodzic_ekstra_punkty.html">Przyznaj punkty ekstra</a></li>
         </ul>
