--- a/rodzic_menu.html
+++ b/rodzic_menu.html
@@ -16,23 +16,8 @@
 		<div class="circles circle10"></div>
 
 <header>	
-	<div class="header-banner">Kacper</div>
+	<div class="header-banner">Bohater Tygodnia</div>
 	<img src="assets/logo.png" class="logo">
-	<nav hidden> 
-        <ul class="nav-main">
-            <li><a href="rodzic_misje.html">MISJE</a></li>
-            <li><a href="rodzic_postepy.html">POSTĘPY</a></li>
-            <li><a href="rodzic_nagrody.html">NAGRODY</a></li>
-        </ul>
-        <ul class="nav-add">
-            <li><a href="dziecko_menu.html">Przejdź na stronę dziecka</a></li>
-            <li>Ustawienia profilu dziecka</li>
-			<li>Przełacz dziecko</li>
-			<li><a href="rodzic_historia.html">Historia postępów</a></li>
-			<li><a href="rodzic_ekstra_punkty.html">Przyznaj punkty ekstra</a></li>
-        </ul>
-    </nav>
-	<label for="nav"></label>
 </header>
 
 <div class="container">
@@ -110,11 +95,12 @@
 		</a>
 	</div>
 
-
+	
 	</div>
 </div>
 <script src="js/data.js"></script>
-<script src="js/rodzic_misje.js"></script>
+<script src="js/obsluga_misji.js"></script>
+<script src="js/postepy_odznaki.js"></script>
 <script src="js/rodzic_wspolne.js"></script>
 </body>
 </html>
