ostatnie poprawki do menu dziecka

--- a/dziecko_menu.html
+++ b/dziecko_menu.html
@@ -16,8 +16,8 @@
 		<div class="circles circle5"></div>
 		<div class="circles circle4"></div>
 		<div class="circles circle3"></div>
-		<!-- <div class="circles circle2"></div> -->
-		<!-- <div class="circles circle1"></div> -->
+		<div class="circles circle2"></div>
+		<div class="circles circle1"></div>
 
 	<div class="index-banner index-banner-smaller">
 		<h1>Kacper</h1> 
@@ -28,9 +28,9 @@
 <div class="container">
 
 	<ul class="menu">
-		<a href='#'><li class="menu-bohater circles circle2"><p>BOHATER</p></li></a>
-		<a href='dziecko_misje.html'><li class="menu-misje circles circle10"><p>MISJE</p></li></a>
-		<a href='dziecko_odznaki.html'><li class="menu-odznaki circles circle9"><p>ODZNAKI</p></li></a>
+		<a href='#'><li class="menu-bohater circles circle1"><p>BOHATER</p></li></a>
+		<a href='dziecko_misje.html'><li class="menu-misje circles circle9"><p>MISJE</p></li></a>
+		<a href='dziecko_odznaki.html'><li class="menu-odznaki circles circle10"><p>ODZNAKI</p></li></a>
 		<a href='#'><li class="menu-nagrody circles circle8"><p>NAGRODY</p></li></a>		
 	</ul>
 
