Akutalna wersja ze zmianami w menu dziecka i nawigacja

--- a/rodzic_menu.html
+++ b/rodzic_menu.html
@@ -16,8 +16,10 @@
 		<div class="circles circle10"></div>
 
 <header>	
-	<div class="header-banner">Bohater Tygodnia</div>
-	<img src="assets/logo.png" class="logo">
+	<a href="index.html">
+		<div class="header-banner">Bohater Tygodnia</div>
+		<img src="assets/logo.png" class="logo">
+	</a>
 </header>
 
 <div class="container">
@@ -25,7 +27,7 @@
 	<div class="kr-container">
 
 		
-		<div class="kr-label">Kacper
+		<div class="kr-label"><p>Kacper</p>
 
 		</div>	
 
@@ -37,7 +39,7 @@
 		</div>
 
 		<div class="kr-present" id="present">
-			<a href="#">
+			<a href="rodzic_nagrody.html">
 				<img src="assets/present.svg" class="kr-enlarge">
 				<p>1 nagroda do odbioru</p>
 			</a>
@@ -75,7 +77,7 @@
 	</div>
 
 	<div class="kr-present" id="present">
-		<a href="#">
+		<a href="rodzic_nagrody.html">
 			<img src="assets/present.svg" class="kr-enlarge">
 			<p>1 nagroda do odbioru</p>
 		</a>
