--- a/dziecko_login.html
+++ b/dziecko_login.html
@@ -20,11 +20,13 @@
 		<div class="circles circle2"></div>
 		<div class="circles circle1"></div>
 
-<div class="index-banner index-banner-smaller">
-	<h1>Bohater</h1> <br>
-	<h1 class="font-skew">Tygodnia</h1> 
-	<img src="assets/logo.png" class="logo">
-</div>
+	<a href="index.html">
+		<div class="index-banner index-banner-smaller">
+			<h1>Bohater</h1> <br>
+			<h1 class="font-skew">Tygodnia</h1> 
+			<img src="assets/logo.png" class="logo">
+		</div>	
+	</a>
 		
 	
 <div class="index-container">
