--- a/rodzic_login.html
+++ b/rodzic_login.html
@@ -19,11 +19,13 @@
 		<div class="circles circle2"></div>
 		<div class="circles circle1"></div>
 
-<div class="index-banner">
-	<h1>Bohater</h1> <br>
-	<h1 class="font-skew">Tygodnia</h1> 
-	<img src="assets/logo.png" class="logo">
-</div>
+	<a href="index.html">
+		<div class="index-banner">
+			<h1>Bohater</h1> <br>
+			<h1 class="font-skew">Tygodnia</h1> 
+			<img src="assets/logo.png" class="logo">
+		</div>
+	</a>
 	
 <div class="container">
 		
