--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<div class="circles circle2"></div>
 		<div class="circles circle1"></div>
 
-<div class="index-banner">
+<div class="index-banner index-banner-smaller">
 	<h1>Bohater</h1> <br>
 	<h1 class="font-skew">Tygodnia</h1> 
 	<img src="assets/logo.png" class="logo">
