--- a/rodzic_dodaj_dziecko.html
+++ b/rodzic_dodaj_dziecko.html
@@ -22,7 +22,7 @@
 <div class="index-banner">
 	<h1>Bohater</h1> <br>
 	<h1 class="font-skew">Tygodnia</h1> 
-	<img src="assets/logo.png" class="logo">
+	<img src="assets/logo_l.png" class="logo">
 </div>
 	
 <div class="container">
