zmiana klasy index na title i poprawa paddingow

--- a/dziecko_menu.html
+++ b/dziecko_menu.html
@@ -22,7 +22,7 @@
 	<a href="index.html">
 		<div class="index-banner index-banner-smaller">
 			<h1>Kacper</h1> 
-			<img src="assets/logo.png" class="logo">
+			<img src="assets/logoXL.png" class="logo">
 		</div>
 	</a>
 
