--- a/dziecko_login.html
+++ b/dziecko_login.html
@@ -24,7 +24,7 @@
 		<div class="index-banner index-banner-smaller">
 			<h1>Bohater</h1> <br>
 			<h1 class="font-skew">Tygodnia</h1> 
-			<img src="assets/logo.png" class="logo">
+			<img src="assets/logoXL.png" class="logo">
 		</div>	
 	</a>
 		
