poprawione wszystkie nagłówki w ekranach logowania

--- a/dziecko_menu.html
+++ b/dziecko_menu.html
@@ -19,14 +19,14 @@
 		<div class="circles circle2"></div>
 		<div class="circles circle1"></div>
 
-	<a href="index.html">
-		<div class="index-banner index-banner-smaller">
-			<h1>Kacper</h1> 
-			<img src="assets/logoXL.png" class="logo">
-		</div>
-	</a>
-
-<div class="container">
+		<a href="index.html">
+				<div class="title-banner">
+						<img src="assets/logoXL.png" class="logo">
+						<h1>Kacper</h1> 
+					</div>
+				</a>
+				
+	<div class="title-container">
 
 	<ul class="menu">
 		<a href='#'><li class="menu-bohater circles circle1"><p>BOHATER</p></li></a>
