--- a/rodzic_login.html
+++ b/rodzic_login.html
@@ -20,14 +20,14 @@
 		<div class="circles circle1"></div>
 
 	<a href="index.html">
-		<div class="index-banner">
-			<h1>Bohater</h1> <br>
-			<h1 class="font-skew">Tygodnia</h1> 
-			<img src="assets/logoXL.png" class="logo">
-		</div>
-	</a>
-	
-<div class="container">
+			<div class="title-banner">
+					<img src="assets/logoXL.png" class="logo">
+					<h1>Bohater</h1> <br>
+					<h1 class="font-skew">Tygodnia</h1> 
+				</div>
+			</a>
+			
+<div class="title-container">
 		
 	<form action='rodzic_dodaj_dziecko.html'>
 	
