--- a/dziecko_login.html
+++ b/dziecko_login.html
@@ -20,16 +20,15 @@
 		<div class="circles circle2"></div>
 		<div class="circles circle1"></div>
 
-	<a href="index.html">
-		<div class="index-banner index-banner-smaller">
-			<h1>Bohater</h1> <br>
-			<h1 class="font-skew">Tygodnia</h1> 
-			<img src="assets/logoXL.png" class="logo">
-		</div>	
-	</a>
-		
-	
-<div class="index-container">
+		<a href="index.html">
+		<div class="title-banner">
+				<img src="assets/logoXL.png" class="logo">
+				<h1>Bohater</h1> <br>
+				<h1 class="font-skew">Tygodnia</h1> 
+			</div>
+		</a>
+				
+<div class="title-container">
 	<img src="assets/bohater2.png" height="200px">
 	<img src="assets/bohater.png" height="300px">
 	<img src="assets/bohater3.png" height="200px">
