--- a/rodzic_dodaj_dziecko.html
+++ b/rodzic_dodaj_dziecko.html
@@ -19,13 +19,15 @@
 		<div class="circles circle2"></div>
 		<div class="circles circle1"></div>
 
-<div class="index-banner">
-	<h1>Bohater</h1> <br>
-	<h1 class="font-skew">Tygodnia</h1> 
-	<img src="assets/logoXL.png" class="logo">
-</div>
-	
-<div class="container">
+		<a href="index.html">
+				<div class="title-banner">
+						<img src="assets/logoXL.png" class="logo">
+						<h1>Bohater</h1> <br>
+						<h1 class="font-skew">Tygodnia</h1> 
+					</div>
+		</a>
+				
+<div class="title-container">
 
 	<form  action='rodzic_menu.html'>
 	
