--- a/rodzic_rejestracja.html
+++ b/rodzic_rejestracja.html
@@ -11,23 +11,23 @@
 
 <body class="parent title-page">
 
-		<div class="circles circle7"></div>
-		<div class="circles circle6"></div>
-		<div class="circles circle5"></div>
-		<div class="circles circle4"></div>
-		<div class="circles circle3"></div>
-		<div class="circles circle2"></div>
-		<div class="circles circle1"></div>
+	<div class="circles circle7"></div>
+	<div class="circles circle6"></div>
+	<div class="circles circle5"></div>
+	<div class="circles circle4"></div>
+	<div class="circles circle3"></div>
+	<div class="circles circle2"></div>
+	<div class="circles circle1"></div>
 
-		<a href="index.html">
-			<div class="index-banner">
-				<h1>Bohater</h1> <br>
-				<h1 class="font-skew">Tygodnia</h1> 
-				<img src="assets/logoXL.png" class="logo">
-			</div>
-		</a>
+	<a href="index.html">
+	<div class="title-banner">
+			<img src="assets/logoXL.png" class="logo">
+			<h1>Bohater</h1> <br>
+			<h1 class="font-skew">Tygodnia</h1> 
+		</div>
+	</a>
 	
-<div class="container">
+<div class="title-container">
 
 	
 	<form action='rodzic_login.html'>
