--- a/rodzic_rejestracja.html
+++ b/rodzic_rejestracja.html
@@ -38,10 +38,8 @@
 
 		<input type='password' placeholder='Powtórz Hasło'>
 
-		<input class="kr-input" type="checkbox" >
-			<label id="gender" for="kr-input">Jestem Tatą</label>
-		<input class="kr-input" type="checkbox" >
-			<label id="gender" for="kr-input">Jestem Mamą</label>
+		<input type="radio" name="parent-name" id="parent-left"><label for="parent-left" class="double">Jestem Tatą</label>
+		<input type="radio" name="parent-name" id="parent-right"><label for="parent-right" class="double">Jestem Mamą</label>
 
 		<button type='submit'>ZAREJESTRUJ</button>
 
