projekt menu, dodane klasy kid

--- a/rodzic_menu.html
+++ b/rodzic_menu.html
@@ -34,24 +34,70 @@
 
 <div class="container">
 
-	<div class="kr-container">
-
-		<a href="rodzic_edytuj_dziecko.html">
-			<div class="kr-label">KACPER
-			</div>	
-		</a>
-
-		<div class="kr-accept">
-			<a href="rodzic_postepy.html">
+<div class="kid-container">
+	
+		
+			<a href="rodzic_edytuj_dziecko.html">
+				<div class="kid-label">KACPER
+				</div>	
+			</a>
+		
+			<div class="kid-icon">
+				<a href="rodzic_postepy.html">
 				<img src="assets/tick.svg" class="kr-enlarge">
 				<p>3 misje do akceptacji</p>
-			</a>
-		</div>
-
-		<div class="kr-present" id="present">
-			<a href="#">
+				</a>	
+			</div>		
+	
+			<div class="kid-icon">		
+				<a href="rodzic_nagrody.html">
 				<img src="assets/present.svg" class="kr-enlarge">
 				<p>1 nagroda do odbioru</p>
+				</a>
+			</div>
+	
+			<div class="progress" id="kr-progress"> 
+				<div class="progress-undone"> </div>
+				<div class="progress-wait"> </div>
+				<div class="progress-done"> </div>
+				<img src="assets/logo.png" class="logo">
+				<p class="kr-progress-p" id="dodo">0/30</p>
+			</div>
+	
+			<div class="kid-icon">
+					<a href="rodzic_misje.html">
+							<img src="assets/plus.svg" class="kr-enlarge">
+							<p>Dodaj misję</p>
+						</a>
+			</div>
+			<div class="kid-icon">
+					<a href="rodzic_misje.html">
+							<img src="assets/plus.svg" class="kr-enlarge">
+							<p>Dodaj misję</p>
+						</a>
+			</div>
+			
+		</div>
+
+	<div class="kid-container">
+
+	
+		<a href="rodzic_edytuj_dziecko.html">
+			<div class="kid-label">ANIA
+			</div>	
+		</a>
+	
+		<div class="kid-icon">
+			<a href="rodzic_postepy.html">
+			<img src="assets/tick.svg" class="kr-enlarge">
+			<p>3 misje do akceptacji</p>
+			</a>	
+		</div>		
+
+		<div class="kid-icon">		
+			<a href="rodzic_nagrody.html">
+			<img src="assets/present.svg" class="kr-enlarge">
+			<p>1 nagroda do odbioru</p>
 			</a>
 		</div>
 
@@ -59,64 +105,23 @@
 			<div class="progress-undone"> </div>
 			<div class="progress-wait"> </div>
 			<div class="progress-done"> </div>
-			<p class="kr-progress-p" id="dodo">29/30</p>
 			<img src="assets/logo.png" class="logo">
-		</div>
-		<div>
-			<p></p>	
+			<p class="kr-progress-p" id="dodo">0/30</p>
 		</div>
 
-
-		<div class="kr-plus" id="kr-plus">
-			<a href="rodzic_misje.html">
-				<img src="assets/plus.svg" class="kr-enlarge">
-				<p>Dodaj misję</p>
-			</a>
+		<div class="kid-icon">
+				<a href="rodzic_misje.html">
+						<img src="assets/plus.svg" class="kr-enlarge">
+						<p>Dodaj misję</p>
+					</a>
 		</div>
-
-
-	</div>
-
-	<div class="kr-container">
-
-	
-		<a href="rodzic_edytuj_dziecko.html">
-			<div class="kr-label">ANIA
-			</div>	
-		</a>
-
-	<div class="kr-accept">
-		<a href="rodzic_postepy.html">
-			<img src="assets/tick.svg" class="kr-enlarge">
-			<p>3 misje do akceptacji</p>
-		</a>
-	</div>
-
-	<div class="kr-present" id="present">
-		<a href="#">
-			<img src="assets/present.svg" class="kr-enlarge">
-			<p>1 nagroda do odbioru</p>
-		</a>
-	</div>
-
-	<div class="progress" id="kr-progress"> 
-		<div class="progress-undone"> </div>
-		<div class="progress-wait"> </div>
-		<div class="progress-done"> </div>
-		<img src="assets/logo.png" class="logo">
-		<p class="kr-progress-p" id="dodo">0/30</p>
-
-
-	</div>
-
-	<div class="kr-plus" id="kr-plus">
-		<a href="rodzic_misje.html">
-			<img src="assets/plus.svg" class="kr-enlarge">
-			<p>Dodaj misję</p>
-		</a>
-	</div>
-
-
+		<div class="kid-icon">
+				<a href="rodzic_misje.html">
+						<img src="assets/plus.svg" class="kr-enlarge">
+						<p>Dodaj misję</p>
+					</a>
+		</div>
+		
 	</div>
 </div>
 <script src="js/data.js"></script>
