--- a/rodzic_menu.html
+++ b/rodzic_menu.html
@@ -34,50 +34,49 @@
 
 <div class="container">
 
-<div class="kid-container">
+	<!-- <div class="kid-container"> -->
+
+		<a href="rodzic_edytuj_dziecko.html">
+			<div class="kid-label">KACPER
+			</div>	
+		</a>
 	
-		
-			<a href="rodzic_edytuj_dziecko.html">
-				<div class="kid-label">KACPER
-				</div>	
+		<div class="kid-icon">
+			<a href="rodzic_postepy.html">
+			<img src="assets/tick.svg" class="kr-enlarge">
+			<p>3 misje do akceptacji</p>
+			</a>	
+		</div>		
+
+		<div class="kid-icon">		
+			<a href="rodzic_nagrody.html">
+			<img src="assets/present.svg" class="kr-enlarge">
+			<p>1 nagroda do odbioru</p>
 			</a>
-		
-			<div class="kid-icon">
-				<a href="rodzic_postepy.html">
-				<img src="assets/tick.svg" class="kr-enlarge">
-				<p>3 misje do akceptacji</p>
-				</a>	
-			</div>		
-	
-			<div class="kid-icon">		
-				<a href="rodzic_nagrody.html">
-				<img src="assets/present.svg" class="kr-enlarge">
-				<p>1 nagroda do odbioru</p>
-				</a>
-			</div>
-	
-			<div class="progress" id="kr-progress"> 
-				<div class="progress-undone"> </div>
-				<div class="progress-wait"> </div>
-				<div class="progress-done"> </div>
-				<img src="assets/logo.png" class="logo">
-				<p class="kr-progress-p" id="dodo">0/30</p>
-			</div>
-	
-			<div class="kid-icon">
-					<a href="rodzic_misje.html">
-							<img src="assets/plus.svg" class="kr-enlarge">
-							<p>Dodaj misję</p>
-						</a>
-			</div>
-			<div class="kid-icon">
-					<a href="rodzic_misje.html">
-							<img src="assets/plus.svg" class="kr-enlarge">
-							<p>Dodaj misję</p>
-						</a>
-			</div>
-			
 		</div>
+
+		<!-- <div class="progress" id="kr-progress"> 
+			<div class="progress-undone"> </div>
+			<div class="progress-wait"> </div>
+			<div class="progress-done"> </div>
+			<img src="assets/logo.png" class="logo">
+			<p class="kr-progress-p" id="dodo">0/30</p>
+		</div> -->
+
+		<div class="kid-icon">
+			<a href="rodzic_misje.html">
+				<img src="assets/plus.svg" class="kr-enlarge">
+				<p>Dodaj misję</p>
+			</a>
+		</div>
+		<div class="kid-icon">
+			<a href="rodzic_misje.html">
+				<img src="assets/plus.svg" class="kr-enlarge">
+				<p>Dodaj misję</p>
+			</a>
+		</div>
+			
+	<!-- </div> -->
 
 	<div class="kid-container">
 
@@ -110,23 +109,19 @@
 		</div>
 
 		<div class="kid-icon">
-				<a href="rodzic_misje.html">
-						<img src="assets/plus.svg" class="kr-enlarge">
-						<p>Dodaj misję</p>
-					</a>
+			<a href="rodzic_misje.html">
+				<img src="assets/plus.svg" class="kr-enlarge">
+				<p>Dodaj misję</p>
+			</a>
 		</div>
 		<div class="kid-icon">
-				<a href="rodzic_misje.html">
-						<img src="assets/plus.svg" class="kr-enlarge">
-						<p>Dodaj misję</p>
-					</a>
+			<a href="rodzic_misje.html">
+				<img src="assets/plus.svg" class="kr-enlarge">
+				<p>Dodaj misję</p>
+			</a>
 		</div>
 		
 	</div>
 </div>
-<script src="js/data.js"></script>
-<script src="js/rodzic_misje.js"></script>
-<script src="js/rodzic_wspolne.js"></script>
-<script src="js/menu_misje.js"></script>
 </body>
 </html>
