menu bez progress bar

--- a/rodzic_menu.html
+++ b/rodzic_menu.html
@@ -10,7 +10,10 @@
 </head>
 
 <body class="parent">
-
+		<div class="circles circle1"></div>
+	    <div class="circles circle8"></div>
+		<div class="circles circle9"></div>
+		<div class="circles circle10"></div>
 <header>	
 	<div class="header-banner">Bohater Tygodnia</div>
 	<img src="assets/logo.png" class="logo">
@@ -34,7 +37,7 @@
 
 <div class="container">
 
-	<!-- <div class="kid-container"> -->
+ <div class="kid-container">
 
 		<a href="rodzic_edytuj_dziecko.html">
 			<div class="kid-label">KACPER
@@ -55,14 +58,6 @@
 			</a>
 		</div>
 
-		<!-- <div class="progress" id="kr-progress"> 
-			<div class="progress-undone"> </div>
-			<div class="progress-wait"> </div>
-			<div class="progress-done"> </div>
-			<img src="assets/logo.png" class="logo">
-			<p class="kr-progress-p" id="dodo">0/30</p>
-		</div> -->
-
 		<div class="kid-icon">
 			<a href="rodzic_misje.html">
 				<img src="assets/plus.svg" class="kr-enlarge">
@@ -76,7 +71,7 @@
 			</a>
 		</div>
 			
-	<!-- </div> -->
+		</div>
 
 	<div class="kid-container">
 
@@ -100,13 +95,6 @@
 			</a>
 		</div>
 
-		<div class="progress" id="kr-progress"> 
-			<div class="progress-undone"> </div>
-			<div class="progress-wait"> </div>
-			<div class="progress-done"> </div>
-			<img src="assets/logo.png" class="logo">
-			<p class="kr-progress-p" id="dodo">0/30</p>
-		</div>
 
 		<div class="kid-icon">
 			<a href="rodzic_misje.html">
