TEST DLUGIE IMIE

--- a/rodzic_postepy.html
+++ b/rodzic_postepy.html
@@ -16,7 +16,7 @@
 		<div class="circles circle10"></div>
 
 <header>	
-	<div class="header-banner">Kacper </div>
+	<div class="header-banner">WŁADYSŁAWA </div>
 	<img src="assets/logo.png" class="logo">
 	<nav hidden> 
         <ul class="nav-main">
