--- a/rodzic_menu.html
+++ b/rodzic_menu.html
@@ -15,7 +15,7 @@
 		<div class="circles circle9"></div>
 		<div class="circles circle10"></div>
 <header>	
-	<div class="header-banner">Bohater Tygodnia</div>
+	<div class="header-banner">WŁADYSŁAWA</div>
 	<img src="assets/logo.png" class="logo">
 </header>
 
