--- a/rodzic_menu.html
+++ b/rodzic_menu.html
@@ -15,7 +15,7 @@
 		<div class="circles circle9"></div>
 		<div class="circles circle10"></div>
 <header>	
-	<div class="header-banner">WŁADYSŁAWA</div>
+	<div class="header-banner">MENU</div>
 	<img src="assets/logo.png" class="logo">
 </header>
 
@@ -23,35 +23,35 @@
 
  <div class="kid-container">
 
-		<a href="rodzic_edytuj_dziecko.html">
+		<a href="rodzic_postepy.html">
 			<div class="kid-label">KACPER
 			</div>	
 		</a>
 	
 		<div class="kid-icon">
 			<a href="rodzic_postepy.html">
-			<img src="assets/tick.svg" class="kr-enlarge">
+			<img src="assets/mission.svg" class="enlarge">
 			<p>3 misje do akceptacji</p>
 			</a>	
 		</div>		
 
 		<div class="kid-icon">		
 			<a href="rodzic_nagrody.html">
-			<img src="assets/present.svg" class="kr-enlarge">
+			<img src="assets/gift.svg" class="enlarge">
 			<p>1 nagroda do odbioru</p>
 			</a>
 		</div>
 
 		<div class="kid-icon">
 			<a href="rodzic_misje.html">
-				<img src="assets/plus.svg" class="kr-enlarge">
-				<p>Dodaj misję</p>
+				<img src="assets/list2.svg" class="enlarge">
+				<p>Dodaj nową misję</p>
 			</a>
 		</div>
 		<div class="kid-icon">
-			<a href="rodzic_misje.html">
-				<img src="assets/plus.svg" class="kr-enlarge">
-				<p>Dodaj misję</p>
+			<a href="rodzic_ekstra_punkty.html">
+				<img src="assets/addstars.svg" class="enlarge">
+				<p>Dodaj ekstra punkty</p>
 			</a>
 		</div>
 			
@@ -60,40 +60,42 @@
 	<div class="kid-container">
 
 	
-		<a href="rodzic_edytuj_dziecko.html">
-			<div class="kid-label">ANIA
-			</div>	
-		</a>
+		<a href="rodzic_postepy.html">
+				<div class="kid-label">ZOSIA
+				</div>	
+			</a>
+		
+			<div class="kid-icon">
+				<a href="rodzic_postepy.html">
+				<img src="assets/mission.svg" class="enlarge">
+				<p>3 misje do akceptacji</p>
+				</a>	
+			</div>		
 	
-		<div class="kid-icon">
-			<a href="rodzic_postepy.html">
-			<img src="assets/tick.svg" class="kr-enlarge">
-			<p>3 misje do akceptacji</p>
-			</a>	
-		</div>		
-
-		<div class="kid-icon">		
-			<a href="rodzic_nagrody.html">
-			<img src="assets/present.svg" class="kr-enlarge">
-			<p>1 nagroda do odbioru</p>
-			</a>
-		</div>
-
-
-		<div class="kid-icon">
-			<a href="rodzic_misje.html">
-				<img src="assets/plus.svg" class="kr-enlarge">
-				<p>Dodaj misję</p>
-			</a>
-		</div>
-		<div class="kid-icon">
-			<a href="rodzic_misje.html">
-				<img src="assets/plus.svg" class="kr-enlarge">
-				<p>Dodaj misję</p>
-			</a>
-		</div>
+			<div class="kid-icon">		
+				<a href="rodzic_nagrody.html">
+				<img src="assets/gift.svg" class="enlarge">
+				<p>1 nagroda do odbioru</p>
+				</a>
+			</div>
+	
+			<div class="kid-icon">
+				<a href="rodzic_misje.html">
+					<img src="assets/list2.svg" class="enlarge">
+					<p>Dodaj nową misję</p>
+				</a>
+			</div>
+			<div class="kid-icon">
+				<a href="rodzic_ekstra_punkty.html">
+					<img src="assets/addstars.svg" class="enlarge">
+					<p>Dodaj ekstra punkty</p>
+				</a>
+			</div>
 		
 	</div>
+	<a href="rodzic_dodaj_dziecko.html">
+		<div class="plus">+</div>
+	</a>
 </div>
 </body>
 </html>
