--- a/rodzic_nagrody.html
+++ b/rodzic_nagrody.html
@@ -19,17 +19,16 @@
 	<div class="header-banner">Kacper</div>
 	<img src="assets/logo.png" class="logo">
 	<nav hidden> 
-        <ul class="nav-main">
-            <li><a href="rodzic_misje.html">MISJE</a></li>
-            <li><a href="rodzic_postepy.html">POSTĘPY</a></li>
-            <li><a href="rodzic_nagrody.html">NAGRODY</a></li>
-        </ul>
-        <ul class="nav-add">
-            <li><a href="dziecko_menu.html">Przejdź na stronę dziecka</a></li>
-            <li><a href="rodzic_edycja_dziecko.html">Ustawienia profilu dziecka</a></li>
-			<li><a href="rodzic_menu.html">Przełacz dziecko</a></li>
-			<li><a href="rodzic_ekstra_punkty.html">Przyznaj punkty ekstra</a></li>
-        </ul>
+		<ul class="nav-main">
+				<li><a href="rodzic_misje.html">MISJE</a></li>
+				<li><a href="rodzic_postepy.html">POSTĘPY</a></li>
+				<li><a href="rodzic_nagrody.html">NAGRODY</a></li>
+			</ul>
+			<ul class="nav-add">
+				<li><a href="dziecko_menu.html">Przejdź na stronę dziecka</a></li>
+				<li><a href="rodzic_edycja_dziecko.html">Ustawienia profilu dziecka</a></li>
+				<li><a href="rodzic_menu.html">Przełącz dziecko</a></li>
+			</ul>
     </nav>
 	<label for="nav"></label>
 </header>
