--- a/rodzic_postepy.html
+++ b/rodzic_postepy.html
@@ -16,7 +16,7 @@
 		<div class="circles circle10"></div>
 
 <header>	
-	<div class="header-banner">WŁADYSŁAWA </div>
+	<div class="header-banner">Kacper </div>
 	<img src="assets/logo.png" class="logo">
 	<nav hidden> 
         <ul class="nav-main">
@@ -27,8 +27,7 @@
         <ul class="nav-add">
             <li><a href="dziecko_menu.html">Przejdź na stronę dziecka</a></li>
             <li><a href="rodzic_edycja_dziecko.html">Ustawienia profilu dziecka</a></li>
-			<li><a href="rodzic_menu.html">Przełacz dziecko</a></li>
-			<li><a href="rodzic_ekstra_punkty.html">Przyznaj punkty ekstra</a></li>
+			<li><a href="rodzic_menu.html">Przełącz dziecko</a></li>
         </ul>
     </nav>
 	<label for="nav"></label>
