--- a/rodzic_ekstra_punkty.html
+++ b/rodzic_ekstra_punkty.html
@@ -19,18 +19,16 @@
 	<div class="header-banner">Kacper </div>
 	<img src="assets/logo.png" class="logo">
 	<nav hidden> 
-        <ul class="nav-main">
-            <li><a href="rodzic_misje.html">MISJE</a></li>
-            <li><a href="rodzic_postepy.html">POSTĘPY</a></li>
-            <li><a href="rodzic_nagrody.html">NAGRODY</a></li>
-        </ul>
-        <ul class="nav-add">
-            <li><a href="dziecko_menu.html">Przejdź na stronę dziecka</a></li>
-            <li>Ustawienia profilu dziecka</li>
-			<li>Przełącz pomiędzy dziećmi</li>
-			<li><a href="rodzic_historia.html">Historia postępów</a></li>
-			<li><a href="rodzic_ekstra_punkty.html">Przyznaj punkty ekstra</a></li>
-        </ul>
+		<ul class="nav-main">
+				<li><a href="rodzic_misje.html">MISJE</a></li>
+				<li><a href="rodzic_postepy.html">POSTĘPY</a></li>
+				<li><a href="rodzic_nagrody.html">NAGRODY</a></li>
+			</ul>
+			<ul class="nav-add">
+				<li><a href="dziecko_menu.html">Przejdź na stronę dziecka</a></li>
+				<li><a href="rodzic_edycja_dziecko.html">Ustawienia profilu dziecka</a></li>
+				<li><a href="rodzic_menu.html">Przełącz dziecko</a></li>
+			</ul>
     </nav>
 	<label for="nav"></label>
 </header>
@@ -38,12 +36,11 @@
 <div class="container">
 	
 	
-<img src="assets/logo_l.png" width="300px" height="300px">
+<img src="assets/logoXL.png" width="300px" height="300px">
 
 <form class="">
 
 	<input type="text" name="newMissionName" placeholder="Za co punkty?">
-	<p>Liczba punktów ekstra</p>
 	<span class="less">-</span><input type="number" name="newMissionPoints" placeholder="Liczba punktów ekstra"><span class="more">+</span>
 	<button type='submit'>DODAJ PUNKTY</button>
 
