Dodany progressbar do rodzic menu

--- a/rodzic_menu.html
+++ b/rodzic_menu.html
@@ -42,6 +42,16 @@
 			</a>
 		</div>
 
+		<div class="total-progress">
+			<p>Wykonanie w tym tygodniu: </p>
+			<div class="progress"> 
+				<div class="progress-undone"> </div>
+				<div class="progress-wait"> </div>
+				<div class="progress-done"> </div> 
+				<img src="assets/logo.png" class="logo">
+			</div>
+		</div>
+
 		<div class="kid-icon">
 			<a href="rodzic_misje.html">
 				<img src="assets/list2.svg" class="enlarge">
@@ -58,44 +68,56 @@
 		</div>
 
 	<div class="kid-container">
-
 	
 		<a href="rodzic_postepy.html">
-				<div class="kid-label">ZOSIA
-				</div>	
+			<div class="kid-label">ZOSIA
+			</div>	
+		</a>
+	
+		<div class="kid-icon">
+			<a href="rodzic_postepy.html">
+			<img src="assets/mission.svg" class="enlarge">
+			<p>3 misje do akceptacji</p>
+			</a>	
+		</div>		
+
+		<div class="kid-icon">		
+			<a href="rodzic_nagrody.html">
+			<img src="assets/gift.svg" class="enlarge">
+			<p>1 nagroda do odbioru</p>
 			</a>
-		
-			<div class="kid-icon">
-				<a href="rodzic_postepy.html">
-				<img src="assets/mission.svg" class="enlarge">
-				<p>3 misje do akceptacji</p>
-				</a>	
-			</div>		
-	
-			<div class="kid-icon">		
-				<a href="rodzic_nagrody.html">
-				<img src="assets/gift.svg" class="enlarge">
-				<p>1 nagroda do odbioru</p>
-				</a>
+		</div>
+
+
+		<div class="total-progress">
+			<p>Wykonanie w tym tygodniu: </p>
+			<div class="progress"> 
+				<div class="progress-undone"> </div>
+				<div class="progress-wait"> </div>
+				<div class="progress-done"> </div> 
+				<img src="assets/logo.png" class="logo">
 			</div>
-	
-			<div class="kid-icon">
-				<a href="rodzic_misje.html">
-					<img src="assets/list2.svg" class="enlarge">
-					<p>Dodaj nową misję</p>
-				</a>
-			</div>
-			<div class="kid-icon">
-				<a href="rodzic_ekstra_punkty.html">
-					<img src="assets/addstars.svg" class="enlarge">
-					<p>Dodaj ekstra punkty</p>
-				</a>
-			</div>
+		</div>
+
+		<div class="kid-icon">
+			<a href="rodzic_misje.html">
+				<img src="assets/list2.svg" class="enlarge">
+				<p>Dodaj nową misję</p>
+			</a>
+		</div>
+		<div class="kid-icon">
+			<a href="rodzic_ekstra_punkty.html">
+				<img src="assets/addstars.svg" class="enlarge">
+				<p>Dodaj ekstra punkty</p>
+			</a>
+		</div>
 		
 	</div>
+
 	<a href="rodzic_dodaj_dziecko.html">
 		<div class="plus">+</div>
 	</a>
+	
 </div>
 </body>
 </html>
