Poprawiony dziecko_menu header

--- a/rodzic_menu.html
+++ b/rodzic_menu.html
@@ -15,8 +15,10 @@
 		<div class="circles circle9"></div>
 		<div class="circles circle10"></div>
 <header>	
+	<a href="index.html">
 	<div class="header-banner">MENU</div>
 	<img src="assets/logo.png" class="logo">
+	</a>
 </header>
 
 <div class="container">
