Pierwsza próba ekranu startowego - kolejne sekcje przewijane

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
 <body class="kid title-page">
 
+	<section id="section01" class='page-container'>
+	
 	    <div class="circles circle7"></div>
 		<div class="circles circle6"></div>
 		<div class="circles circle5"></div>
@@ -20,29 +22,70 @@
 		<div class="circles circle2"></div>
 		<div class="circles circle1"></div>
 
-<div class="title-banner">
-	<img src="assets/logoXL.png" class="logo">
-	<h1>Bohater</h1> <br>
-	<h1 class="font-skew">Tygodnia</h1> 
-</div>
+		<div class="title-banner">
+			<img src="assets/logoXL.png" class="logo">
+			<h1>Bohater</h1> <br>
+			<h1 class="font-skew">Tygodnia</h1> 
+		</div>
 
 
-<div class="title-container">
+		<div class="title-container">
 
-		<img src="assets/bohater2.png" height="300px">
-		<img src="assets/bohater.png" height="400px">
-		<img src="assets/bohater3.png" height="300px">
+			<img src="assets/bohater2.png" height="300px">
+			<img src="assets/bohater.png" height="400px">
+			<img src="assets/bohater3.png" height="300px">
+			
+			<br>
+			<form class="enter left" action='rodzic_rejestracja.html'>
+				<button >RODZIC</button>
+			</form>
+
+			<form class="enter right" action='dziecko_login.html'>
+				<button>DZIECKO</button>
+			</form>
+
+		</div>
+
+		<a href="#section02" class="scrolling"><span></span>Dowiedz się więcej</a>
+	</section>
+
+	<section id="section02" class="half-page-container">
+	<p>Czy</p>
+	<ul class="blue-square">
+		<li>...masz dość ciągłego przypominania dzieciom o posprzątaniu zabawek, odrabianiu lekcji albo myciu zębów ?</li>
+		<li>...chcesz by Twoje dziecko częściej pomagało Ci w pracach domowych ?</li>
+	</ul>
+
+	
+	</section>	
+
+	<section id="section03" class="half-page-container">
+			<div class="logo-banner"><p>Bohater</p> <p class="font-skew">Tygodnia</p></div>
 		
-		<br>
-	<form class="enter left" action='rodzic_rejestracja.html'>
-		<button >RODZIC</button>
-	</form>
+		<p class="move-down">to narzędzie które sprawi że:</p>
+		<ul class="green-circle">
+			<li>codzienne obowiązki przestaną być problemem,</li>
+			<li>Twoje dziecko będzie bardziej samodzielne,</li>
+			<li>a Ty zyskach więcej czasu dla siebie!</li>
+		</ul>
 
-	<form class="enter right" action='dziecko_login.html'>
-		<button>DZIECKO</button>
-	</form>
-</div>
+		<a href="#section04" class="scrolling"><span></span>Dowiedz się więcej</a>
+	</section>	
 
+	<section id="section04" class="page-container">
+	
+		<a href="#section05" class="scrolling"><span></span>Dowiedz się więcej</a>
+	</section>	
 
+	<section id="section05" class="page-container">
+			
+		<a href="#section01" class="scrolling scrolling-reverse"><span></span>Dowiedz się więcej</a>
+	</section>	
+
+<!-- <div class="page-container page1"> -->
+
+<script src="js/title.js"></script>
 </body>
+
+
 </html>
