--- a/index.html
+++ b/index.html
@@ -69,17 +69,44 @@
 			<li>a Ty zyskach więcej czasu dla siebie!</li>
 		</ul>
 
-		<a href="#section04" class="scrolling"><span></span>Dowiedz się więcej</a>
+		<a href="#section04" class="scrolling"><span></span>... tylko jak?</a>
 	</section>	
 
 	<section id="section04" class="page-container">
 	
-		<a href="#section05" class="scrolling"><span></span>Dowiedz się więcej</a>
+		<p class="move-all">Bohater Tygodnia motywuje Twoje dziecko na dwa sposoby:</p>
+
+		<div class="logo-banner-point"><p>Dziecko wykonuje misje i zdobywa punkty za które odbiera wybrane przez Ciebie <span>nagrody</span></p> </div>
+
+		<p> <img src="assets/gift.svg" class="img-float-right">
+			Pamiętaj nagrody nie muszą być czymś materialnym - może być to wyjście na lody lub przekazanie pieniędzy na cel charytatywny
+		</p>
+		
+		
+		<div class="logo-banner-point logo-banner-point-right"><p>Po wykonaniu wszystkich misji w każdym tygodniu Dziecko zdobywa <span>odznakę Bohatera Tygodnia</span></p></div>
+		
+		<p> <img src="assets/bohater.png" class="img-float-left">Za odznakę dziecko ulepsza swojego wirtualnego Bohatera dodając mu nowe moce a Ty uczysz dziecko systematyczności!</p>
+		
+		<a href="#section05" class="scrolling"><span></span>... tylko kiedy?</a>
 	</section>	
 
 	<section id="section05" class="page-container">
 			
-		<a href="#section01" class="scrolling scrolling-reverse"><span></span>Dowiedz się więcej</a>
+
+		<p class="move-all">Wydaje Ci się że nie masz czasu albo pomysłu od czego zacząć? </p>
+		<ul class="green-circle">
+			<li>nasz <span>zespół ekspertów - doświadczonych psychologów</span> opracował gotowe plany zadań i nagród odpowiednie dla dziecka w Twoim wieku. Możesz je wykorzystać w całości albo się nimi zainspirować.</li>
+			<li>strona jest <span>intuicyjna, prosta i darmowa,</span> dostosowana dla dzieci w różnym wieku, nawet dla najmłodszych nieumiejących czytać</li>
+			<li>ani Ty ani Twoje dziecko nie spędzicie godzin na jej obsłudze - <span>naszą misją jest dać Ci więcej czasu a nie go zabrać!</span></li>
+		</ul>
+
+
+		<img src="assets/bohater2.png" height="200px">
+		<img src="assets/bohater.png" height="300px">
+		<img src="assets/bohater3.png" height="200px">
+		
+
+		<a href="#section01" class="scrolling scrolling-reverse"><span></span>Powrót do góry</a>
 	</section>	
 
 <!-- <div class="page-container page1"> -->
