Dodany ekran dziecko_nagrody

--- a/dziecko_nagrody.html
+++ b/dziecko_nagrody.html
@@ -28,6 +28,6 @@
 
 </div>
 <script src="js/data.js"></script>
-<script src="js/rodzic_nagrody.js"></script>
+<script src="js/dziecko_nagrody.js"></script>
 </body>
 </html>
