--- a/dziecko_login.html
+++ b/dziecko_login.html
@@ -12,13 +12,13 @@
 
 <body class="kid title-page">
 
-	    <div class="circles circle7"></div>
+	    <!-- <div class="circles circle7"></div>
 		<div class="circles circle6"></div>
 		<div class="circles circle5"></div>
 		<div class="circles circle4"></div>
 		<div class="circles circle3"></div>
 		<div class="circles circle2"></div>
-		<div class="circles circle1"></div>
+		<div class="circles circle1"></div> -->
 
 		<a href="index.html">
 		<div class="title-banner">
