--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 
 	<section id="section01" class='page-container'>
 	
-	    <div class="circles circle7"></div>
+	    <!-- <div class="circles circle7"></div>
 		<div class="circles circle6"></div>
 		<div class="circles circle5"></div>
 		<div class="circles circle4"></div>
 		<div class="circles circle3"></div>
 		<div class="circles circle2"></div>
-		<div class="circles circle1"></div>
+		<div class="circles circle1"></div> -->
 
 		<div class="title-banner">
 			<img src="assets/logoXL.png" class="logo">
