zmiany tła - nadal do poprawki

--- a/dziecko_nagrody.html
+++ b/dziecko_nagrody.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="background-kid">
 <head>
 	<meta charset="utf-8">
 	<title>Bohater Tygodnia</title>
@@ -10,10 +10,10 @@
 </head>
 
 <body class="kid">
-		<div class="circles circle1"></div>
+		<!-- <div class="circles circle1"></div>
 	    <div class="circles circle8"></div>
 		<div class="circles circle9"></div>
-		<div class="circles circle10"></div>
+		<div class="circles circle10"></div> -->
 
 <header>
     <a href="dziecko_menu.html">
