--- a/rodzic_edycja_dziecko.html
+++ b/rodzic_edycja_dziecko.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="background-parent-title">
 <head>
 	<meta charset="utf-8">
 	<title>Bohater Tygodnia</title>
@@ -11,13 +11,13 @@
 
 <body class="parent title-page">
 
-		<div class="circles circle7"></div>
+		<!-- <div class="circles circle7"></div>
 		<div class="circles circle6"></div>
 		<div class="circles circle5"></div>
 		<div class="circles circle4"></div>
 		<div class="circles circle3"></div>
 		<div class="circles circle2"></div>
-		<div class="circles circle1"></div>
+		<div class="circles circle1"></div> -->
 
 		<a href="index.html">
 				<div class="title-banner">
