--- a/rodzic_menu.html
+++ b/rodzic_menu.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="background-parent-title">
 <head>
 	<meta charset="utf-8">
 	<title>Bohater Tygodnia</title>
@@ -10,10 +10,10 @@
 </head>
 
 <body class="parent">
-		<div class="circles circle1"></div>
+		<!-- <div class="circles circle1"></div>
 	    <div class="circles circle8"></div>
 		<div class="circles circle9"></div>
-		<div class="circles circle10"></div>
+		<div class="circles circle10"></div> -->
 <header>	
 	<a href="index.html">
 	<div class="header-banner">MENU</div>
