--- a/dziecko_misje.html
+++ b/dziecko_misje.html
@@ -5,7 +5,10 @@
 	<title>Bohater Tygodnia</title>
 	<link rel="stylesheet" href="css/styl.css">
 	<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-	 <script src="https://code.jquery.com/jquery-1.3.2.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
+	<script
+  src="https://code.jquery.com/jquery-1.9.1.min.js"
+  integrity="sha256-wS9gmOZBqsqWxgIVgA8Y9WcQOa7PgSIX+rPA0VL2rbQ="
+  crossorigin="anonymous"></script>
 </head>
 
 <body class="kid">
