--- a/dziecko_misje.html
+++ b/dziecko_misje.html
@@ -5,9 +5,9 @@
 	<title>Bohater Tygodnia</title>
 	<link rel="stylesheet" href="css/styl.css">
 	<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-	<script
-  src="https://code.jquery.com/jquery-1.9.1.min.js"
-  integrity="sha256-wS9gmOZBqsqWxgIVgA8Y9WcQOa7PgSIX+rPA0VL2rbQ="
+<script
+  src="https://code.jquery.com/jquery-1.9.1.js"
+  integrity="sha256-e9gNBsAcA0DBuRWbm0oZfbiCyhjLrI6bmqAl5o+ZjUA="
   crossorigin="anonymous"></script>
 </head>
 
