--- a/dziecko_misje.html
+++ b/dziecko_misje.html
@@ -5,10 +5,7 @@
 	<title>Bohater Tygodnia</title>
 	<link rel="stylesheet" href="css/styl.css">
 	<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-<script
-  src="https://code.jquery.com/jquery-1.3.2.js"
-  integrity="sha256-IzpdFr7lpkvzvBmr48yBKh4GGUNfAcFj9ih3Okaf9xk="
-  crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
 </head>
 
 <body class="kid">
