Dodana strona Bohater dla dziecka, dodany folder ikony ze wszystkimi ikonami, ujednolicone nazewnictwo ikon

--- a/dziecko_menu.html
+++ b/dziecko_menu.html
@@ -20,7 +20,7 @@
 	<div class="title-container">
 
 	<ul class="menu">
-		<a href='#'><li class="menu-bohater circles circle1"><p>BOHATER</p></li></a>
+		<a href='dziecko_bohater.html'><li class="menu-bohater circles circle1"><p>BOHATER</p></li></a>
 		<a href='dziecko_misje.html'><li class="menu-misje circles circle9"><p>MISJE</p></li></a>
 		<a href='dziecko_odznaki.html'><li class="menu-odznaki circles circle10"><p>ODZNAKI</p></li></a>
 		<a href='dziecko_nagrody.html'><li class="menu-nagrody circles circle8"><p>NAGRODY</p></li></a>		
